--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/keenan560/Trade-Ninja#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -25,6 +26,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "nodemon": "^2.0.2"
   }
