--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.0",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2"
   }
 }
