--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT = 3000
 HOST = 127.0.0.1
 DB_USER = root
+SOCKET = /tmp/mysql.sock
 DB_PASSWORD = 1Barbuda
 DB = trade_ninja_db
 NODE_ENV = production
