--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 PORT = 3000
-HOST = 127.0.0.1
+HOST = localhost
 DB_USER = root
-SOCKET = /tmp/mysql.sock
 DB_PASSWORD = 1Barbuda
 DB = trade_ninja_db
-NODE_ENV = production
+NODE_ENV = development
 SESS_NAME = sid
 SESS_SECRET = ninja
 API_KEY = R44O6BSRP4WH9B1Y
