fixed formmating on leaderboards

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ HOST = localhost
 DB_USER = root
 DB_PASSWORD = 1Barbuda
 DB = trade_ninja_db
-NODE_ENV = production
+NODE_ENV = development
 SESS_NAME = sid
 SESS_SECRET = ninja
 API_KEY = R44O6BSRP4WH9B1Y
