changed ajax url on the frontend  install cors

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT = 3000
-HOST = localhost
+PORT = 2508
+HOST =  mysql-trade-ninja-9505.nodechef.com:2508
 DB_USER = root
-DB_PASSWORD = 1Barbuda
+DB_PASSWORD = 5Q86XXOtul:GKDXbSWB7E:e7VTGv05Ms
 DB = trade_ninja_db
 NODE_ENV = development
 SESS_NAME = sid
