--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-PORT = 2508
-HOST =  mysql-trade-ninja-9505.nodechef.com:2508
+PORT = 3000
+DB_PORT = 2508
+HOST =  mysql-trade-ninja-9505.nodechef.com
 DB_USER = root
 DB_PASSWORD = 5Q86XXOtul:GKDXbSWB7E:e7VTGv05Ms
 DB = trade_ninja_db
