--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.2",
